2012-04-23  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #18462: wrong definition for uid column in tx_realurl_redirects
	* Fixed bug #18479: redirect statistics sometimes are not updated

2012-02-17  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Released version 1.12.1

2012-02-02  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #18447: Many domains in the same installation is not supported by the _DOMAINS
	* Fixed bug #18448: cHash calculation sometimes wrong

2011-12-21  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fix: BE module for redirects is case-insensitive but FE handling is case-sensitive
	* Released RealURL 1.12.0

2011-11-30  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Feature: allow redirects for various domains
	* Fixed bug #18354: Wrong cHash when valueDefault and enableCHashCache is used (thanks to Helmut Hummel)

2011-11-17  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Manual update: prefer absRefPrefix to baseUrl from now on

2011-11-11  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #18322: Deprecated function call to t3lib_div::testInt()

2011-10-27  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Added t3lib_div::loadTCA('pages') to ext_tables.php

2011-06-29	Dmitry Dulepov	<dmitry.dulepov@gmail.com>

	* Fixed bug #18200: Multiple issues with _DOMAINS feature

2011-06-16	Dmitry Dulepov	<dmitry.dulepov@gmail.com>

	* Fixed bug #18170: Unique Aliases not shown correctly (thanks to Joachim Streit)
	* Released RealURL 1.11.2

2011-06-13	Dmitry Dulepov	<dmitry.dulepov@gmail.com>

	* Fixed bug #18176: L=x does not work with _DOMAINS

2011-05-04  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #18118: Warning message related to pass-by-reference
	* Fixed warning: missing 2nd parameter to fullQuoteStr
	* Released version 1.11.1

2011-05-03  Dmitry Dulepov	<dmitry.dulepov@gmail.com>

	* Released RealURL 1.11.0

2011-04-22  Dmitry Dulepov	<dmitry.dulepov@gmail.com>
